[package]
name = "recomb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^7.1"
regex = "^1.6"

[dependencies.nom-grapheme-clusters]
git = "https://github.com/brunoczim/nom-grapheme-clusters"
branch = "add-symbol"
