[package]
name = "recomb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^7.1"
regex = "^1.6"
nom-grapheme-clusters = "^0.3.1"

[dependencies.clap]
version = "4.2.7"
features = ["derive"]
optional = true

[features]
cli = ["clap"]
default = ["cli"]

[[bin]]
name = "recomb"
required-features = ["cli"]
